# dsx

./: .gitignore  1.md  Cargo.toml  LICENSE  README.md  clippy.toml  dsx_patch.diff  release.sh  rustfmt.toml
.deepseek/: instructions.md
.deepseek-code/: instructions.md
crates/dsx-agent/: Cargo.toml
crates/dsx-agent/src/: brief.rs  budget.rs  classify.rs  conversation.rs  lib.rs  prompt.rs  runner_sync.rs  scope.rs  scope_tests.rs  tool_defs.rs  tool_executor.rs  tool_executor_file_tests.rs  tool_executor_mcp_tests.rs  tool_executor_permission_tests.rs  tool_executor_tests.rs  tool_implementations.rs  tool_scope_tests.rs  transcript.rs  types.rs
crates/dsx-agent/src/tool_implementations/: command_scope.rs  command_tools.rs  file_tools.rs  mcp_tools.rs  memory_tools.rs  patch_tools.rs
crates/dsx-config/: Cargo.toml
crates/dsx-config/src/: layers.rs  lib.rs  loader.rs  settings.rs
crates/dsx-context/: Cargo.toml
crates/dsx-context/src/: lib.rs
crates/dsx-core/: Cargo.toml
crates/dsx-core/src/: error.rs  lib.rs  types.rs
crates/dsx-eval/: Cargo.toml
crates/dsx-eval/src/: lib.rs
crates/dsx-fs/: Cargo.toml
crates/dsx-fs/src/: lib.rs
crates/dsx-git/: Cargo.toml
crates/dsx-git/src/: lib.rs
crates/dsx-index/: Cargo.toml
crates/dsx-index/src/: db.rs  extract.rs  lib.rs  scan.rs  tests.rs  types.rs
crates/dsx-mcp/: Cargo.toml
crates/dsx-mcp/src/: client.rs  config.rs  frame.rs  lib.rs  tests.rs  types.rs
crates/dsx-memory/: Cargo.toml
crates/dsx-memory/src/: lib.rs  migrations.rs  run_ledger.rs  run_ledger_row.rs  run_ledger_tests.rs  task_summary.rs
crates/dsx-patch/: Cargo.toml
crates/dsx-patch/src/: lib.rs
crates/dsx-permissions/: Cargo.toml
crates/dsx-permissions/src/: lib.rs
crates/dsx-prompts/: Cargo.toml
crates/dsx-prompts/src/: lib.rs
crates/dsx-provider/: Cargo.toml
crates/dsx-provider/src/: client.rs  lib.rs  streaming.rs  streaming_tests.rs  streaming_types.rs  types.rs
crates/dsx-sandbox/: Cargo.toml
crates/dsx-sandbox/src/: lib.rs
crates/dsx-session/: Cargo.toml
crates/dsx-session/src/: lib.rs
crates/dsx-telemetry/: Cargo.toml
crates/dsx-telemetry/src/: lib.rs
crates/dsx-tools/: Cargo.toml
crates/dsx-tools/src/: lib.rs
crates/dsx-tui/: Cargo.toml
crates/dsx-tui/src/: app_tests.rs  draw.rs  draw_budget.rs  draw_chat.rs  draw_context.rs  draw_context_tests.rs  draw_input.rs  draw_mission.rs  draw_mission_state.rs  draw_mission_tests.rs  draw_panes.rs  draw_run_ledger.rs  draw_settings.rs  draw_status.rs  draw_status_tests.rs  draw_tools.rs  draw_workflow.rs  draw_workflow_panels.rs  folder_notes.rs  i18n.rs  lib.rs  stream_events.rs  types.rs
docs/en/: README.md
docs/kk/: README.md
docs/ru/: README.md
docs/zh/: README.md
plan/: deepseek-code-tui.agent.final.base.docx  deepseek-code-tui.agent.final.converted.md  deepseek-code-tui.agent.final.footnote.docx  deepseek-code-tui.agent.final.md  deepseek-code-tui.agent.outline.md  deepseek-code-tui_sec01.md  deepseek-code-tui_sec02.md  deepseek-code-tui_sec03.md  deepseek-code-tui_sec04.md  deepseek-code-tui_sec06.md  deepseek-code-tui_sec07.md  deepseek-code-tui_sec08.md  deepseek-code-tui_sec09.md  deepseek-code-tui_sec10.md  plan.md
plan/research/: agent_architecture_patterns_dim04.md  code_editing_patch_engine_dim05.md  competitors_additional_dim03.md  deepseek_code_tui_cross_verification.md  deepseek_code_tui_insight.md  deepseek_v4_api_dim01.md  rust_tui_ecosystem_dim02.md
src/: agent_preflight.rs  agent_preflight_tests.rs  cli.rs  cli_context_budget.rs  cli_tests.rs  context_budget_advice.rs  context_capsule.rs  context_capsule_json.rs  context_capsule_output.rs  context_capsule_tests.rs  context_preview.rs  context_preview_metrics.rs  context_preview_output.rs  context_preview_tests.rs  doctor.rs  doctor_tests.rs  event_convert.rs  event_convert_tests.rs  handlers.rs  handlers_agent.rs  handlers_index.rs  handlers_mcp.rs  handlers_scope.rs  handlers_tests.rs  line_limit.rs  main.rs  main_runtime.rs  main_runtime_tests.rs  run_ledger.rs  scope_guard.rs  session_state.rs  session_state_tests.rs  task_scope.rs  task_scope_tests.rs  tui_context_budget.rs  tui_context_budget_tests.rs  tui_keys.rs  tui_keys_tests.rs  tui_modal_keys.rs  tui_preflight.rs  (+22 more)
