[package]
name = "dsx-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DSX context manager: project map, file summaries, token budget"

[dependencies]
dsx-core.workspace = true
dsx-fs.workspace = true
dsx-git.workspace = true
dsx-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
