[package]
name = "dsx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DSX Code core types and CLI entry point"

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
