[package]
name = "dsx-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DeepSeek V4 API client (OpenAI-compatible Chat Completions)"

[dependencies]
dsx-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures-util.workspace = true
bytes.workspace = true
